class HikeReview {
    late String hikeTitle;
    late String userNotes;
    late int userRating;

    HikeReview(this.hikeTitle, this.userNotes, this.userRating);
}