enum HikeState {
  PAUSED,
  ENDED,
  PLANNING,
  HIKING,
  REVIEW
}